--- a/config.toml
+++ b/config.toml
@@ -17,5 +17,13 @@ Paginate = 25
 
 [[menu.main]]
     name = "About"
-    weight = -100
+    weight = 1
     url = "/about/"
+
+[[menu.main]]
+    name = "Authors"
+    weight = 2
+    url = "/author/"
+
+[taxonomies]
+    authors = "author"
